--- a/src/components/common/FeatureHome/index.module.scss
+++ b/src/components/common/FeatureHome/index.module.scss
@@ -15,6 +15,10 @@
     align-self: stretch;
     aspect-ratio: 1/1;
     height: 200px;
+
+    @media screen and (max-width: 576px) {
+        height: 145px;
+    }
 }
 
 .f_featureWrapperVideo {
