--- a/src/components/social/header/index.module.scss
+++ b/src/components/social/header/index.module.scss
@@ -83,6 +83,7 @@
         margin-right: 20px;
         padding: 10px 10px;
         font-size: 18px;
+        cursor: pointer;
         
         &.active {
             border-bottom: 5px solid $accent-color;
