--- a/src/containers/Media/Watch/player/index.module.scss
+++ b/src/containers/Media/Watch/player/index.module.scss
@@ -40,6 +40,10 @@
     padding: 0  20px;
     color: white;
 
+    @media (max-width: 575.98px) {
+        position: fixed;
+    }    
+
     background: rgb(255,255,255);
     background: linear-gradient(180deg, rgba(255,255,255,0) 6%, rgba(0,0,0,1) 100%);
 
