--- a/src/containers/ManagerPanel/index.module.scss
+++ b/src/containers/ManagerPanel/index.module.scss
@@ -10,6 +10,7 @@
     margin-bottom: 15px;
     cursor: pointer;
     transition: all 0.1s ease-in-out;
+    color: rgba($color: #fff, $alpha: 0.9);
 
     &:hover {
         background-color: rgba($color: $primary-color, $alpha: 1.0);
