--- a/src/containers/Artist/ViewArtist/index.module.scss
+++ b/src/containers/Artist/ViewArtist/index.module.scss
@@ -21,11 +21,13 @@
 
 .artistHeaderInfopane {
   flex: 2;
-  padding: 0 2rem;
+  // padding: 0 2rem;
 }
 
 .artistHeaderActionpane {
   flex: 1;
+  padding-top: 12px;
+  margin-left: 9px;
 }
 
 .artistTitle {
@@ -48,4 +50,5 @@
 
 .artistActionIcon {
   width: 20px;
+  color: red;
 }
