finalized creating artist insights

--- a/src/containers/Artist/ViewArtist/index.module.scss
+++ b/src/containers/Artist/ViewArtist/index.module.scss
@@ -15,8 +15,9 @@
 
 .artistHeaderWrapper {
   position: relative;
-  top: -60px;
-  padding: 0 4rem;
+  top: -70px;
+  padding: 1rem 4rem;
+  background-image: linear-gradient(to top, #323232, transparent);
 }
 
 .artistHeaderInfopane {
