--- a/src/containers/Artist/StatsArtist/index.module.scss
+++ b/src/containers/Artist/StatsArtist/index.module.scss
@@ -8,4 +8,9 @@
     border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.3);
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+
+    @media screen and (max-width: 768px) {
+        top: 100px;
+        right: 50px;
+    }
 }
