--- a/src/components/common/LangBar/index.module.scss
+++ b/src/components/common/LangBar/index.module.scss
@@ -1,10 +1,10 @@
 .wrapper {
     background-color: #333;
-    color: #aaa;
+    color: #ffff;
     padding: 5px 3px 5px 3px;
     border-radius: 8px 0 0 8px;
     border: none;
-    box-shadow: 1px 1px 2px #111;
+    box-shadow: 1px 1px 2px rgb(107, 104, 104);
     opacity: 0.3;
 }
 
