--- a/src/components/media/IndividualPlayer/index.module.scss
+++ b/src/components/media/IndividualPlayer/index.module.scss
@@ -3,6 +3,11 @@
 .wrapper {
   height: 240px;
   margin-bottom: 2rem;
+  overflow: hidden;
+
+  @media screen and (max-width: 576px) {
+    height: auto;
+  }
 }
 
 .contentWrapper {
@@ -36,6 +41,14 @@
   font-size: 2rem;
   color: $white;
   text-shadow: 2px 2px $secondary-black;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  
+  @media screen and (max-width: 576px) {
+    font-size: 1.5rem;
+    width: 250px;
+  }
 }
 
 .artistName {
