--- a/src/components/media/UploadCard/index.module.scss
+++ b/src/components/media/UploadCard/index.module.scss
@@ -1,13 +1,19 @@
 @import '$assets/scss/main.scss';
 
+
+.wrapper {
+  @include card;
+}
+
 .dragIcon {
   height: 15px;
   width: 15px;
 }
 
 .settingsIcon {
-  height: 15px;
-  width: 15px;
+  height: 25px;
+  width: 25px;
+  color: white;
 }
 
 .contentWrapper {
@@ -24,4 +30,3 @@
 .closeBtn {
   margin: 0 10px;
 }
-
