--- a/src/containers/Artist/ViewArtist/index.module.scss
+++ b/src/containers/Artist/ViewArtist/index.module.scss
@@ -3,6 +3,7 @@
 .artistViewContainer {
   margin-top: $margin-top;
   padding-bottom: 8em;
+
   p {
     color: $white !important;
   }
@@ -13,19 +14,27 @@
   width: 100%;
 }
 
+.homeTabsWrapper {
+  margin-top: 0rem;
+  margin-bottom: 2rem;
+}
+
 .artistHeaderWrapper {
   position: relative;
-  top: -60px;
-  padding: 0 4rem;
+  top: -70px;
+  padding: 1rem 4rem;
+  background-image: linear-gradient(to top, #323232, transparent);
 }
 
 .artistHeaderInfopane {
   flex: 2;
-  padding: 0 2rem;
+  // padding: 0 2rem;
 }
 
 .artistHeaderActionpane {
   flex: 1;
+  padding-top: 12px;
+  margin-left: 9px;
 }
 
 .artistTitle {
@@ -48,4 +57,5 @@
 
 .artistActionIcon {
   width: 20px;
+  color: red;
 }
