--- a/src/containers/Media/Watch/player/index.module.scss
+++ b/src/containers/Media/Watch/player/index.module.scss
@@ -17,7 +17,7 @@
     overflow: hidden;
 
     video {
-        height: 100vh;
+        // height: 100vh;
         width: 100vw;
     }
 }
@@ -41,7 +41,7 @@
     color: white;
 
     @media (max-width: 575.98px) {
-        position: fixed;
+        // position: fixed;
     }    
 
     background: rgb(255,255,255);
