--- a/src/components/media/IndividualPlayer/index.module.scss
+++ b/src/components/media/IndividualPlayer/index.module.scss
@@ -21,8 +21,8 @@
 }
 
 .playerWrapper {
-  height: 60px;
-  padding: 15px 2rem 5px;
+  height: 40px;
+  // padding: 15px 2rem 5px;
   background-color: $primary-color;
 }
 
