--- a/src/containers/ManagerPanel/artists/index.module.scss
+++ b/src/containers/ManagerPanel/artists/index.module.scss
@@ -29,5 +29,13 @@
         height: 100%;
         width: 100%;
         border-radius: 100%;
+
+        .buttonPublish {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+        }
     }
+
+
 }
