--- a/src/containers/Profile/index.module.scss
+++ b/src/containers/Profile/index.module.scss
@@ -4,8 +4,8 @@
 .container {
   position: relative;
   min-height: 100%;
-  margin-top: 4rem !important;
-  padding: 4rem 2rem 10rem 2rem;
+  // margin-top: 1rem !important;
+  padding: 1rem 2rem 10rem 2rem;
 }
 
 .heroContainer {
